TAG: uniprotload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: uniprotload-6-0-15-1
DATE: 07/22/2020
STAFF: lec
CHANGES:
1) bin/makeMGIAssocFile.py: Replace SQL that was causing performance issues
                            with postgres 12

TAG: uniprotload-6-0-14-1
DATE: 08/20/2019
STAFF: lec
CHANGES:
TR13150/bin/makeGOAnnot.py: ignore EC ids that contain "-"

TAG: uniprotload-6-0-11-3
DATE: 01/04/2018
STAFF: sc
CHANGES: 
1) TR12697 - add to override QC input lines where input 
    symbol does not match database
2) TR12599 - add dos2unix to convert input file

TAG: uniprotload-6-0-11-2
DATE: 11/01/2017
STAFF: sc
CHANGES: TR12627 - add processing of ldb column in input file

TAG: uniprotload-6-0-11-1
DATE: 10/11/2017
STAFF: sc
CHANGES: merge tr12624 branch to master
1) makeBuckets.py - added loading of the N:1 bucket

TAG: uniprotload-tr12624-BP
DATE: 09/27/2017
STAFF: sc
CHANGES: Branch Point tag for loading of N-1 bucket

TAG: uniprotload-6-0-10-1
DATE: 08/02/2017
STAFF: lec 
CHANGES:
1) TR12624/handle Ensembl issue in "DR" tag
see TR for complete details
#       modified:   bin/UniProtParser.py

TAG: uniprotload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: uniprotload-6-0-6-1
DATE: 12/19/2017
STAFF: lec
CHANGES:
TR12490/remove obsolete qc reports
#	modified:   Install
#	modified:   bin/makeBuckets.py
#	modified:   bin/uniprotload.sh
#	modified:   index.html
#	modified:   uniprotload.config.default
#	deleted:    bin/makeBucketsDiff.py
#	deleted:    bin/makeBucketsDiff.sh
#	deleted:    bin/makeSwissDiffFile.py
#	deleted:    bin/makeSwissDiffFile.sh

TAG: uniprotload-6-0-5-3
TAG: uniprotload-6-0-5-2
DATE: 09/27/2016
STAFF: lec
CHANGES:
TR12240/modificaiton to EC2GO
makeGOAnnot.py
exclude EC ids with "-" (dash)

TAG: uniprotload-6-0-5-1
DATE: 09/01/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key != 2  changed to "= 1"
