@@ -68,32 +68,13 @@ LOG=${LOG_DIAG}
 
 cd ${OUTPUTDIR}
 
-IPCONFIG_CSH=${UNIPROTLOAD}/ipannot_delete.config
-echo "" >> ${LOG}
-date >> ${LOG}
-echo "Running UniProt Marker/InterPro annotation load in delete mode (makeInterProAnnot.sh)" >> ${LOG_DIAG}
-rm -rf ${MARKER_IP_ASSOC_FILE}
-touch ${MARKER_IP_ASSOC_FILE}
-${ANNOTLOADER_CSH} ${IPCONFIG_CSH}
-STAT=$?
-if [ ${STAT} -ne 0 ]
-then
-    echo "Error: Running UniProt Marker/InterPro annotation load in delete mode (makeInterProAnnot.sh)" | tee -a ${LOG}
-    exit 1
-fi
-
 #
-#
-# make the Marker/InterPro annotation file
-#
-
-#
-# Delete and Re-Load InterPro domain names as a vocabulary
+# Incremental load of InterPro domain names as a vocabulary
 #
 echo "" >> ${LOG}
 date >> ${LOG}
 echo "Run vocload to load InterPro domain names (makeInterProAnnot.sh)" | tee -a ${LOG}
-${VOCLOAD}/runSimpleFullLoad.sh ${VOCLOAD}/IP.config 2>&1 >> ${LOG}
+${VOCLOAD}/runSimpleIncLoadNoArchive.sh ${VOCLOAD}/IP.config 2>&1 >> ${LOG}
 STAT=$?
 if [ ${STAT} -ne 0 ]
 then
