@@ -1,16 +1,0 @@
-#!/bin/csh -f
-
-#
-# config variables for Marker/InterPro annotation load
-#
-
-setenv ANNOTDATADIR		${OUTPUTDIR}
-setenv ANNOTMODE		delete
-setenv ANNOTTYPENAME		"InterPro/Marker"
-setenv ANNOTPROPERTY            82
-setenv ANNOTINPUTFILE		${MARKER_IP_ASSOC_FILE}
-setenv ANNOTLOG			${LOGDIR}/ip_delete.log
-setenv DELETEREFERENCE		${MARKER_IP_ANNOT_REF}
-setenv DELETEUSER		${ANNOT_EDITOR}
-setenv ANNOTOBSOLETE        	0
-
