@@ -1,3 +1,10 @@
+TAG: uniprotload-6-0-18-?
+DATE: 03/02/2022
+STAFF: lec
+CHANGES:
+wts2-703/new Noctua -> GO Annotation pipeline
+bin/makeInterProtAnnot.sh ; change from full vocab to incremental vocab
+
 TAG: uniprotload-6-0-16-1
 DATE: 08/21/2020
 STAFF: sc
